--- a/contact_html.css
+++ b/contact_html.css
@@ -14,7 +14,7 @@ html, body { min-height: 100% }
 #menu_12dc9f48_entry:hover { background-color: #323232; color: #FFFFFF !important; }
 #menu_12dc9f48_entry:hover span { color:#FFFFFF !important; }
 		.menu_12dc9f48_mainMenuEntry { text-align: center; }
-		.menu_12dc9f48_mainMenuEntry:hover {	background-color:#282828; }
+		.menu_12dc9f48_mainMenuEntry:hover {	background-color:#706B71; }
 		.menu_12dc9f48_mainMenuEntry:hover span {	color:#FFFFFF !important; }
 		#menu_12dc9f48 .mobileEntry { display: none; } 
 		#menu_12dc9f48 .normalEntry { display: block; } 
@@ -31,7 +31,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
-.textstyle4 { font-size:22pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
+.textstyle4 { font-size:22pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap; }
 .menustyle2 { position:absolute; width:109px; height:38px; left:10px;  }
 .menuentry_text2 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px;  }
 .textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap; }
