--- a/index_html.css
+++ b/index_html.css
@@ -14,7 +14,7 @@ html, body { min-height: 100% }
 #menu_12dc9f48_entry:hover { background-color: #323232; color: #FFFFFF !important; }
 #menu_12dc9f48_entry:hover span { color:#FFFFFF !important; }
 		.menu_12dc9f48_mainMenuEntry { text-align: center; }
-		.menu_12dc9f48_mainMenuEntry:hover {	background-color:#282828; }
+		.menu_12dc9f48_mainMenuEntry:hover {	background-color:#706B71; }
 		.menu_12dc9f48_mainMenuEntry:hover span {	color:#FFFFFF !important; }
 		#menu_12dc9f48 .mobileEntry { display: none; } 
 		#menu_12dc9f48 .normalEntry { display: block; } 
@@ -31,7 +31,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
-.textstyle4 { font-size:22pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
+.textstyle4 { font-size:22pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap; }
 .menustyle2 { position:absolute; width:109px; height:38px; left:10px;  }
 .menuentry_text2 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px;  }
 .textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap; }
@@ -40,15 +40,15 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle5 { position:absolute; width:97px; height:38px; left:411px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
 #placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
-#container_62a35519 { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_62a35519 { vertical-align: top; position:relative; display: inline-block; width:97%; min-height:667px; background:none;  }
 #container_62a35519_padding { margin: 10px; display: block;  }
-#container_52a9ad69 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+#container_52a9ad69 { vertical-align: top; position:relative; display: inline-block; width:93%; min-height:647px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 .textstyle7 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
 .textstyle8 { font-size:18pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-weight:bold; line-height: 1.2;  }
 .textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; font-weight:bold; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-#container_381e378b { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_381e378b { vertical-align: top; position:relative; display: inline-block; width:95%; min-height:281px; background:none;  }
 #container_381e378b_padding { margin: 5px; display: block;  }
-#container_235882ac { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_235882ac { vertical-align: top; position:relative; display: inline-block; width:95%; min-height:250px; background:none;  }
 .textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
 .textstyle11 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
 .ulstyle1 { margin:0; font-size: 12pt; color:#FFFFFF;  }
