--- a/services_html.css
+++ b/services_html.css
@@ -27,7 +27,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 #img_3c70b732 { vertical-align: top; border-radius: 15px; position:relative; display: inline-block; width:55%; background:none; height:auto;  }
 .textstyle2 { text-align:left; }
 .textstyle3 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#0E3B65; background: linear-gradient(to bottom,#0E3B65, #061A2D 50%, #041423 50%, #030E19); border: 1px solid #FFFFFF;  }
+#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:35%; height:38px; text-align:left; background-color:#0E3B65; background: linear-gradient(to bottom,#0E3B65, #072037 50%, #061A2D 50%, #041423); border: 1px solid #FFFFFF;  }
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
@@ -39,9 +39,19 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:38px; left:266px;  }
 .menustyle5 { position:absolute; width:97px; height:38px; left:411px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
-.textstyle7 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-.textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
-.textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
-.ulstyle1 { margin:0; font-size: 12pt; color:#FFFFFF;  }
+#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#container_4473df6d { vertical-align: top; position:relative; display: inline-block; width:90%; background:none;  }
+#container_4473df6d_padding { margin: 10px; display: block;  }
+#container_42a8e7dd { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+.textstyle7 { font-size:18pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
+#container_3f2be38f { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_3f2be38f_padding { margin: 5px; display: block;  }
+#container_4c93732e { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+.textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
+.textstyle9 { font-size:16pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
 .textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
+.textstyle11 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
+@media only screen and (max-width: 800px)
+{
+		#container_4c93732e { width:100%;  }
+}
