--- a/masterpage_html.css
+++ b/masterpage_html.css
@@ -27,7 +27,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 #img_3c70b732 { vertical-align: top; border-radius: 15px; position:relative; display: inline-block; width:55%; background:none; height:auto;  }
 .textstyle2 { text-align:left; }
 .textstyle3 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#0E3B65; background: linear-gradient(to bottom,#0E3B65, #061A2D 50%, #041423 50%, #030E19); border: 1px solid #FFFFFF;  }
+#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:35%; height:38px; text-align:left; background-color:#0E3B65; background: linear-gradient(to bottom,#0E3B65, #072037 50%, #061A2D 50%, #041423); border: 1px solid #FFFFFF;  }
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
@@ -39,4 +39,4 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:38px; left:266px;  }
 .menustyle5 { position:absolute; width:97px; height:38px; left:411px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
