--- a/media_html.css
+++ b/media_html.css
@@ -7,6 +7,24 @@ html, body { min-height: 100% }
 		a.wsp113dc287:visited{ color:#0000A0; text-decoration: none} 
 		a.wsp113dc287:active{ color:#0000A0; text-decoration: none} 
 		a.wsp113dc287:hover{ color:#6C8AAA; text-decoration: none} 
+#table_433edc8a th { border: 2px solid #8C8C8C;  } 
+#table_433edc8a td { border: 2px solid #8C8C8C;  } 
+#gallery_78abf229 div.galleryimgcontainer { box-sizing: border-box; vertical-align: middle; display: inline-block; width: 33%; height: auto; padding: 10px;  } 
+#gallery_78abf229 div.galleryimgcontainer img {  width: 100%;  height: auto;  } 
+@media only screen and (max-width:520px) { #gallery_78abf229 div.galleryimgcontainer { width: 50%; } } 
+@media only screen and (max-width:420px) { #gallery_78abf229 div.galleryimgcontainer { width: 100%; } } 
+#gallery_6d1c74c3 div.galleryimgcontainer { box-sizing: border-box; vertical-align: middle; display: inline-block; width: 33%; height: auto; padding: 10px;  } 
+#gallery_6d1c74c3 div.galleryimgcontainer img {  width: 100%;  height: auto;  } 
+@media only screen and (max-width:520px) { #gallery_6d1c74c3 div.galleryimgcontainer { width: 50%; } } 
+@media only screen and (max-width:420px) { #gallery_6d1c74c3 div.galleryimgcontainer { width: 100%; } } 
+#gallery_6409f847 div.galleryimgcontainer { box-sizing: border-box; vertical-align: middle; display: inline-block; width: 33%; height: auto; padding: 10px;  } 
+#gallery_6409f847 div.galleryimgcontainer img {  width: 100%;  height: auto;  } 
+@media only screen and (max-width:520px) { #gallery_6409f847 div.galleryimgcontainer { width: 50%; } } 
+@media only screen and (max-width:420px) { #gallery_6409f847 div.galleryimgcontainer { width: 100%; } } 
+#gallery_1354b0f div.galleryimgcontainer { box-sizing: border-box; vertical-align: middle; display: inline-block; width: 33%; height: auto; padding: 10px;  } 
+#gallery_1354b0f div.galleryimgcontainer img {  width: 100%;  height: auto;  } 
+@media only screen and (max-width:520px) { #gallery_1354b0f div.galleryimgcontainer { width: 50%; } } 
+@media only screen and (max-width:420px) { #gallery_1354b0f div.galleryimgcontainer { width: 100%; } } 
 #menu_12dc9f48 a { text-decoration: none; }
 #menu_12dc9f48_pane { background-color: #E6E6E6; border: 1px solid #E6E6E6; padding-top: 10px; padding-bottom: 10px; box-shadow: 2px 2px 6px 0px rgba(8, 8, 8, 0.784314); }
 #menu_12dc9f48_hr { background-color: #E6E6E6; height: 1px; border: none; }
@@ -27,7 +45,7 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 #img_3c70b732 { vertical-align: top; border-radius: 15px; position:relative; display: inline-block; width:55%; background:none; height:auto;  }
 .textstyle2 { text-align:left; }
 .textstyle3 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#0E3B65; background: linear-gradient(to bottom,#0E3B65, #061A2D 50%, #041423 50%, #030E19); border: 1px solid #FFFFFF;  }
+#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:35%; height:38px; text-align:left; background-color:#0E3B65; background: linear-gradient(to bottom,#0E3B65, #072037 50%, #061A2D 50%, #041423); border: 1px solid #FFFFFF;  }
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
@@ -39,12 +57,27 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:38px; left:266px;  }
 .menustyle5 { position:absolute; width:97px; height:38px; left:411px;  }
 .textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
-#container_d7f7436 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
+#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#container_d7f7436 { vertical-align: top; position:relative; display: inline-block; width:90%; min-height:607px; background:none;  }
 #container_d7f7436_padding { margin: 10px; display: block;  }
-#container_7446523 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+#container_7446523 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:571px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 #container_7446523_padding { margin: 10px; display: block;  }
-.textstyle7 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
-.textstyle8 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
-.textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle10 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
+.textstyle7 { font-size:18pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
+#table_433edc8a { box-sizing: border-box; vertical-align: top; position:relative; display: inline-table; width:70%; height:0px; background:none; border: 2px solid #8C8C8C; table-layout: fixed;  }
+#cell_64589801 {  }
+.textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
+#cell_52bab2b0 {  }
+#gallery_78abf229 { overflow:hidden; vertical-align: bottom; position:relative; display: inline-block; width:100%;  }
+#cell_149edc9c {  }
+#cell_33ab7473 {  }
+#gallery_6d1c74c3 { overflow:hidden; vertical-align: bottom; position:relative; display: inline-block; width:100%;  }
+#cell_11886076 {  }
+#cell_6199f115 {  }
+#video_69563e92 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:50%; background-color:#D1D1D1; border: 1px solid #A0A0A0;  }
+#cell_9faa198 {  }
+#cell_32a9e224 {  }
+#gallery_6409f847 { overflow:hidden; vertical-align: bottom; position:relative; display: inline-block; width:100%;  }
+#cell_23baf3ea {  }
+#cell_70e60e76 {  }
+#gallery_1354b0f { overflow:hidden; vertical-align: bottom; position:relative; display: inline-block; width:100%;  }
+.textstyle9 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
